# OC_theory

./: КОЛЛ_1_ОС.docx  КОЛЛ_3_ОС.docx
Singleton_Project/: README.md  Singleton_Project.textClipping
Singleton_Project/include/: singleton.hpp
Singleton_Project/src/: main.cpp
lab2/: CMakeLists.txt
lab2/src/: average.cpp  average.h  main.cpp  minmax.cpp  minmax.h  threads.h
lab2/tests/: average_test.cpp  minmax_test.cpp
lab3/: CMakeLists.txt
lab3/src/: array_utils.cpp  array_utils.hpp  main.cpp  marker.cpp  marker.hpp
lab3/tests/: array_utils_test.cpp
lab4/: CMakeLists.txt
lab4/src/: MessageQueue.cpp  MessageQueue.h  Receiver.cpp  Sender.cpp
lab4/tests/: message_queue_test.cpp
lab5/: CMakeLists.txt
lab5/src/: client.cpp  employee.h  server.cpp
lab5/tests/: test_employee.cpp
